--- a/src/main/resources/templates/sede/sedeFragment.html
+++ b/src/main/resources/templates/sede/sedeFragment.html
@@ -33,6 +33,7 @@
 						<!-- PROVINCIA -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.provincia')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">1</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm(sedeWrapper.tipologiaSede + '.provincia') : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="provincia_sede">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.provincia}">Provincia</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -72,6 +73,7 @@
 						<!-- COMUNE -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.comune')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">2</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm(sedeWrapper.tipologiaSede + '.comune') : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="comune_sede">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.comune}">Comune</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -94,6 +96,7 @@
 						<!-- INDIRIZZO -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.indirizzo')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">3</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm(sedeWrapper.tipologiaSede + '.indirizzo') : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="indirizzo_sede">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.indirizzo}">Indirizzo</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -117,6 +120,7 @@
 						<!-- CAP -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.cap')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">4</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm(sedeWrapper.tipologiaSede + '.cap') : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="CAP_sede">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.cap}">CAP</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -140,6 +144,7 @@
 						<!-- TELEFONO -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.telefono')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">5</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm(sedeWrapper.tipologiaSede + '.telefono') : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="telefono_sede">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.telefono}">Telefono</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -163,6 +168,7 @@
 						<!-- FAX -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.fax')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">7</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm(sedeWrapper.tipologiaSede + '.fax') : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="fax_sede">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.fax}">FAX</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -185,6 +191,7 @@
 						<!-- EMAIL -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('sedeWrapper.sede.email')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">8</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm(sedeWrapper.tipologiaSede + '.email') : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="email_sede">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.email}">E-mail</span>
 								<span th:if="${editabile}" class="required">*</span>
