--- a/src/main/resources/templates/persona/personaFragment.html
+++ b/src/main/resources/templates/persona/personaFragment.html
@@ -57,9 +57,7 @@
 
 						<!-- COGNOME -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.cognome')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">1</label>
-							
-							<label class="control-label col-xs-1" th:text="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.cognome',personaWrapper.ruolo)}"></label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.cognome',personaWrapper.ruolo) : ''}"></label>
 							
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="cognome_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.cognome}">Cognome</span>
@@ -82,7 +80,7 @@
 
 						<!-- NOME -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.nome')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">2</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.nome',personaWrapper.ruolo) : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="cognome_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.nome}">Nome</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -104,7 +102,7 @@
 
 						<!-- CODICE FISCALE -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.codiceFiscale')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">3</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.codiceFiscale',personaWrapper.ruolo) : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="codiceFiscale_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.codice_fiscale}">Codice Fiscale</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -147,7 +145,7 @@
 
 						<!-- TELEFONO -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.telefono')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">4</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.telefono',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="telefono_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.telefono}">Telefono</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -173,7 +171,7 @@
 										${personaWrapper.persona.responsabileSistemaInformatico} or
 										${personaWrapper.persona.responsabileQualita}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.cellulare')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">5</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.cellulare',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="cellulare_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.cellulare}">Cellulare</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -195,7 +193,7 @@
 
 						<!-- EMAIL -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.email')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">6</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.email',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="email_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.email}">Email</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -219,7 +217,7 @@
 						<div th:if="${personaWrapper.persona.legaleRappresentante} or
 									${personaWrapper.persona.delegatoLegaleRappresentante}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.pec')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">7</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.pec',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="pec_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.posta_elettronica_certificata}">Posta elettronica certificata (PEC)</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -245,7 +243,7 @@
 									${personaWrapper.persona.responsabileSistemaInformatico} or
 									${personaWrapper.persona.responsabileQualita}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.professione')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">8</label>
+							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.professione',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="professione_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.professione}">Professione</span>
 								<span th:if="${editabile}" class="required">*</span>
@@ -274,19 +272,19 @@
 						<!-- ALLEGATO 1 (ATTO DI NOMINA) -->
 						<div th:unless="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div th:if="${editabile}" class="divider-dashed"></div>
-							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${counter != null ? ++counter : null}, null, true, ${editabile})" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.attoNomina',personaWrapper.ruolo) : null}, null, true, ${editabile})" ></th:block>
 						</div>
 
 						<!-- ALLEGATO 2 (CURRICULUM VITAE) -->
 						<div th:unless="${personaWrapper.persona.legaleRappresentante}">
 							<div th:if="${editabile}" class="divider-dashed"></div>
-							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, cv, ${counter != null ? ++counter : null}, null, true, ${editabile})"></th:block>
+							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, cv, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.cv',personaWrapper.ruolo) : null}, null, true, ${editabile})"></th:block>
 						</div>
 
 						<!-- ALLEGATO 3 (DELEGA) -->
 						<div th:if="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div th:if="${editabile}" class="divider-dashed"></div>
-							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, delega, ${counter != null ? ++counter : null}, null, true, ${editabile})"></th:block>
+							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, delega, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.delega',personaWrapper.ruolo) : null}, null, true, ${editabile})"></th:block>
 						</div>
 					</form>
 				</div>
