--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -46,7 +46,7 @@
 								</a>
 								<ul class="nav child_menu" style="display: none">
 									<li><a th:href="@{/provider/show/all}" th:text="#{label.scheda_provider}">label.info_provider</a></li>
-									<li><a th:href="@{/provider/accreditamento/list}" th:text="#{label.accreditamento}">label.iter_accreditamento</a></li>
+									<li><a th:href="@{/provider/accreditamento/list}" th:text="#{label.domande_accreditamento}">label.domande_accreditamento</a></li>
 									<li><a th:href="@{/provider/anagrafica/list}" th:text="#{label.anagrafiche}">label.anagrafiche</a></li>
 									<li><a th:href="@{/provider/pianoFormativo/list}" th:text="#{label.piano_formativo}">label.piano_formativo</a></li>
 									<!--
