--- a/src/main/resources/templates/provider/providerFragment.html
+++ b/src/main/resources/templates/provider/providerFragment.html
@@ -152,9 +152,9 @@
 										th:disabled="${!#lists.contains(providerWrapper.idEditabili, counter)}"
 										th:remove="all-but-first">
 										<option
-											th:each="ragioneSociale, row: ${elencoRagioniSociali}"
+											th:each="ragioneSociale, row: ${T(it.tredi.ecm.dao.enumlist.RagioneSocialeEnum).values()}"
 											th:value="${ragioneSociale}"
-											th:text="${ragioneSociale}">tipologia selezionata
+											th:text="${ragioneSociale.nome}">tipologia selezionata
 										</option>
 									</select>
 			                    </div>
@@ -174,6 +174,7 @@
 							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('provider.naturaOrganizzazione') : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="naturaOrganizzazione">
 								<span th:text="#{label.organizzazione_natura}" th:class="${editabile ? '' : 'label-show'}">Natura dell'organizzazione</span>
+								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
 								<div class="col-md-4 col-sm-4 col-xs-12" id="naturaOrganizzazione">
@@ -205,7 +206,8 @@
 						<div class="item form-group" th:classappend="${#fields.hasErrors('providerWrapper.provider.noProfit')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('provider.noProfit') : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="noProfit">
-								<span th:text="#{label.no_profit}" th:class="${editabile ? '' : 'label-show'}">Natura dell'organizzazione</span>
+								<span th:text="#{label.no_profit}" th:class="${editabile ? '' : 'label-show'}">Società no-profit</span>
+								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
 								<div class="col-md-4 col-sm-4 col-xs-12" id="noProfit">
