--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -39,13 +39,12 @@
 						</h3>
 						<ul class="nav side-menu">
 							<!-- li th:if="${#authorization.expression('hasAuthority(''PROVIDER_READ'')')}" -->
-							<li th:if="${#authentication.principal.hasProfile('PROVIDER')}">
+							<li id="provider" th:if="${#authentication.principal.hasProfile('PROVIDER')}">
 								<a>
 									<i class="fa fa-home"></i> <span th:text="#{label.provider}">label.provider</span>
 									<span class="fa fa-chevron-down"></span>
 								</a>
 								<ul class="nav child_menu" style="display: none">
-									<li><a th:href="@{/provider/show/all}" th:text="#{label.scheda_provider}">label.info_provider</a></li>
 									<li><a th:href="@{/provider/accreditamento/list}" th:text="#{label.domande_accreditamento}">label.domande_accreditamento</a></li>
 									<li><a th:href="@{/provider/anagrafica/list}" th:text="#{label.anagrafiche}">label.anagrafiche</a></li>
 									<li><a th:href="@{/provider/pianoFormativo/list}" th:text="#{label.piano_formativo}">label.piano_formativo</a></li>
@@ -60,7 +59,7 @@
 								</ul>
 							</li>
 
-							<li th:if="${#authentication.principal.hasProfile('ADMIN')}">
+							<li id="admin" th:if="${#authentication.principal.hasProfile('ADMIN')}">
 								<a>
 									<i class="fa fa-edit"></i> <span th:text="#{label.segreteria}">label.segreteria</span>
 									<span class="fa fa-chevron-down"></span>
@@ -74,7 +73,7 @@
 							</li>
 
 							<!-- ENGEENERING TEST firma & mypay -->
-							<li th:if="${#authentication.principal.hasProfile('ENGINEERING')}">
+							<li id="engineering" th:if="${#authentication.principal.hasProfile('ENGINEERING')}">
 								<a>
 									<i class="fa fa-bug"></i> <span th:text="#{engineering.engineering}">label.engineering</span>
 									<span class="fa fa-chevron-down"></span>
